several changes to component attributes

--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,10 @@
                 "Mkocansey\\Bladewind\\BladewindServiceProvider"
             ]
         }
+    },
+    "scripts": {
+        "post-update-cmd": [
+            "@php artisan vendor:publish --provider=\"Mkocansey\\Bladewind\\BladewindServiceProvider\" --tag=assets --force"
+        ]
     }
 }
