--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Laravel UI Components using TailwindCSS, Blade Templates and vanilla Javascript",
     "keywords": ["laravel", "ui components", "tailwindcss", "blade components"],
     "require": {
-        "php": ">=7.3"
+        "php": ">=7.3",
+        "laravel/framework": "^9.0"
     },
     "license": "MIT",
     "type": "library",
