Used tailwindcss/forms for form field resets

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "authors": [
         {
             "name": "Michael K. Ocansey",
-            "email": "kabutey@gmail.com"
+            "email": "mike@bladewindui.com"
         }
     ],
     "extra": {
