--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,38 @@
 {
-    "name": "mkocansey/bladewind",
-    "description": "Laravel UI Components using TailwindCSS, Blade Templates and vanilla Javascript",
-    "keywords": ["laravel", "ui components", "tailwindcss", "blade components"],
-    "require": {
-        "php": ">=7.3"
-    },
-    "license": "MIT",
-    "type": "library",
-    "autoload": {
-        "psr-4": {
-            "Mkocansey\\Bladewind\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Michael K. Ocansey",
-            "email": "mike@bladewindui.com"
-        }
-    ],
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Mkocansey\\Bladewind\\BladewindServiceProvider"
-            ]
-        }
-    },
-    "scripts": {
-        "post-update-cmd": [
-            "@php artisan vendor:publish --provider=\"Mkocansey\\Bladewind\\BladewindServiceProvider\" --tag=bladewind-public --force"
-        ]
+  "name": "mkocansey/bladewind",
+  "description": "Laravel UI Components using TailwindCSS, Blade Templates and vanilla Javascript",
+  "keywords": [
+    "laravel",
+    "ui components",
+    "tailwindcss",
+    "blade components"
+  ],
+  "require": {
+    "php": ">=8.0"
+  },
+  "license": "MIT",
+  "type": "library",
+  "autoload": {
+    "psr-4": {
+      "Mkocansey\\Bladewind\\": "src/"
     }
+  },
+  "authors": [
+    {
+      "name": "Michael K. Ocansey",
+      "email": "mike@bladewindui.com"
+    }
+  ],
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Mkocansey\\Bladewind\\BladewindServiceProvider"
+      ]
+    }
+  },
+  "scripts": {
+    "post-update-cmd": [
+      "@php artisan vendor:publish --provider=\"Mkocansey\\Bladewind\\BladewindServiceProvider\" --tag=bladewind-public --force"
+    ]
+  }
 }
