Replace translation calls with static strings in config
Updated config/bladewind.php to use static English strings instead of translation function calls for default labels and placeholders. This avoids errors when the translation files are not yet loaded. Also updated composer.json post-update script to publish both public and lang assets. CSS and JS assets were rebuilt to reflect these changes.

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
   },
   "scripts": {
     "post-update-cmd": [
-      "@php artisan vendor:publish --provider=\"Mkocansey\\Bladewind\\BladewindServiceProvider\" --tag=bladewind-public --force"
+      "@php -r \"if (file_exists('artisan')) passthru('php artisan vendor:publish --tag=bladewind-public --force');\"",
+      "@php -r \"if (file_exists('artisan')) passthru('php artisan vendor:publish --tag=bladewind-lang --force');\""
     ]
   }
 }
