Refactor helper loading and update logo in README
Moved BladewindHelpers.php loading to Composer autoload 'files' for better integration and commented out manual require in the service provider. Updated the logo URL in README. Added camelCase paginationRow helper and made pagination_row a wrapper for backward compatibility.

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
   "autoload": {
     "psr-4": {
       "Mkocansey\\Bladewind\\": "src/"
-    }
+    },
+    "files": [
+      "src/BladewindHelpers.php"
+    ]
   },
   "authors": [
     {
